# supreme

./: .env.local  .gitignore  Makefile  pyproject.toml
app/: main.py
app/routers/: users.py
static/: logs
